--- a/AWS_GCP_NLP_SentimentAnalysis.ipynb
+++ b/AWS_GCP_NLP_SentimentAnalysis.ipynb
@@ -39,8 +39,8 @@
    },
    "outputs": [],
    "source": [
-    "comprehend = boto3.client(service_name='comprehend', aws_access_key_id='AKIAIMSE2EX4PUKJ4PIQ', \n",
-    "                          aws_secret_access_key='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')"
+    "comprehend = boto3.client(service_name='comprehend', aws_access_key_id='my_id', \n",
+    "                          aws_secret_access_key='my_key')"
    ]
   },
   {
